# example-rust-shell

./: .gitignore  Cargo.toml
src/: helpers.rs  jobs.rs  main.rs
tests/: Cargo.toml  trace.rs  trace08.txt
tests/src/: lib.rs
tsh/: Cargo.toml
tsh/src/: helpers.rs  jobs.rs  main.rs
